Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -41,15 +41,20 @@
 <h3>
 <a id="current-projects-" class="anchor" href="#current-projects-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Projects :</h3>
 
+<p><a href="https://github.com/qqtop/NimCx">cx</a></p>
+
+<p>An easy to use library to bring better colors to the Linux terminal
+as well as many utility procs. Include cx in your projects and
+enjoy higher productivity and fun.</p>
+
 <p><a href="https://github.com/qqtop/NimFinLib">nimFinLib</a></p>
 
 <p>A library in Nim to fetch yahoo stock and currency data
 manage accounts ,portfolios,stocks and perform basic calculations.</p>
 
-<h2>
-<a id="example1nim-" class="anchor" href="#example1nim-" aria-hidden="true"><span class="octicon octicon-link"></span></a>example1.nim </h2>
+<p>example1.nim </p>
 
-<div class="highlight highlight-source-nim"><pre><span class="pl-k">import</span> nimFinLib,times,strfmt,strutils
+<div class="highlight highlight-source-nim"><pre><span class="pl-k">import</span> cx,nimFinLib,times,strfmt,strutils
 
 <span class="pl-c"># show latest stock quotes</span>
 <span class="pl-c1">showCurrentStocks</span>(<span class="pl-s">"IBM+BP.L+0001.HK"</span>)
