--- a/cx.html
+++ b/cx.html
@@ -1807,12 +1807,12 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <li><a class="reference" href="#print,T,string,string,int,bool,bool"
     title="print*[T](astring: T; fgr: string = white; bgr: string = black; xpos: int = 0;
           fitLine: bool = false; centered: bool = false)"><wbr />print</a></li>
-  <li><a class="reference" href="#printBiCol,string,string,string,string,int"
-    title="printBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
-            colRight: string = termwhite; xpos: int = 0)"><wbr />print<wbr />Bi<wbr />Col</a></li>
-  <li><a class="reference" href="#printLnBiCol,string,string,string,string,int"
-    title="printLnBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
-              colRight: string = termwhite; xpos: int = 0)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
+  <li><a class="reference" href="#printBiCol,T,string,string,string,int,bool"
+    title="printBiCol*[T](s: T; sep: string; colLeft: string = yellowgreen;
+               colRight: string = termwhite; xpos: int = 0; centered: bool = false)"><wbr />print<wbr />Bi<wbr />Col</a></li>
+  <li><a class="reference" href="#printLnBiCol,T,string,string,string,int,bool"
+    title="printLnBiCol*[T](s: T; sep: string; colLeft: string = yellowgreen;
+                 colRight: string = termwhite; xpos: int = 0; centered: bool = false)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#printStyledsimple,T,string,set[Style]"
     title="printStyledsimple*[T](ss: T; fg: string; astyle: set[Style])"><wbr />print<wbr />Styledsimple</a></li>
   <li><a class="reference" href="#printStyled,T,string,string,set[Style]"
@@ -1859,12 +1859,12 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printRainbow*[T](s: T; astyle: set[Style])"><wbr />print<wbr />Rainbow</a></li>
   <li><a class="reference" href="#printLnRainbow,T,set[Style]"
     title="printLnRainbow*[T](s: T; astyle: set[Style])"><wbr />print<wbr />Ln<wbr />Rainbow</a></li>
-  <li><a class="reference" href="#printBiCol,string,string,string,string,int_2"
-    title="printBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
-            colRight: string = termwhite; xpos: int = 0)"><wbr />print<wbr />Bi<wbr />Col</a></li>
-  <li><a class="reference" href="#printLnBiCol,string,string,string,string,int_2"
-    title="printLnBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
-              colRight: string = termwhite; xpos: int = 0)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
+  <li><a class="reference" href="#printBiCol,T,string,string,string,int,bool_2"
+    title="printBiCol*[T](s: T; sep: string; colLeft: string = yellowgreen;
+               colRight: string = termwhite; xpos: int = 0; centered: bool = false)"><wbr />print<wbr />Bi<wbr />Col</a></li>
+  <li><a class="reference" href="#printLnBiCol,T,string,string,string,int,bool_2"
+    title="printLnBiCol*[T](s: T; sep: string; colLeft: string = yellowgreen;
+                 colRight: string = termwhite; xpos: int = 0; centered: bool = false)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#printHl,string,string,string"
     title="printHl*(s: string; substr: string; col: string = termwhite)"><wbr />print<wbr />Hl</a></li>
   <li><a class="reference" href="#printLnHl,string,string,string"
@@ -3614,14 +3614,14 @@ forward declaration
 
 
 </dd>
-<dt id="printBiCol"><a name="printBiCol,string,string,string,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
-                <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt id="printBiCol"><a name="printBiCol,T,string,string,string,int,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                   <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span></pre></dt>
 <dd>
 forward declaration
 
 </dd>
-<dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
-                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt id="printLnBiCol"><a name="printLnBiCol,T,string,string,string,int,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                     <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span></pre></dt>
 <dd>
 forward declaration
 
@@ -3828,7 +3828,7 @@ forward declaration
 </dd>
 <dt id="printLnRainbow"><a name="printLnRainbow,T,set[Style]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnRainbow</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">astyle</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
 <dd>
-printLnRainbow<blockquote><p>## NOTE to be deprecated soon</p></blockquote>
+printLnRainbow<blockquote><p>## NOTE to mayve deprecated soon</p></blockquote>
 <p>print multicolored string with styles , for available styles see printStyled</p>
 <p>and issues a new line</p>
 <p>may not work with certain Rune</p>
@@ -3836,8 +3836,8 @@ printLnRainbow<blockquote><p>## NOTE to be deprecated soon</p></blockquote>
 <span class="Identifier">printLnRainBow</span><span class="Punctuation">(</span><span class="StringLit">&quot;Aha --&gt; No Style&quot;</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="printBiCol"><a name="printBiCol,string,string,string,string,int_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
-                <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt id="printBiCol"><a name="printBiCol,T,string,string,string,int,bool_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                   <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printBiCol</p>
 <p>echos a line in 2 colors based on a seperators first occurance</p>
@@ -3856,8 +3856,8 @@ printLnRainbow<blockquote><p>## NOTE to be deprecated soon</p></blockquote>
 <span class="Identifier">printBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;{} : {}     {}&quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Good Idea&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;Number&quot;</span><span class="Punctuation">,</span><span class="DecNumber">50</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="Identifier">yellow</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string,int_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
-                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt id="printLnBiCol"><a name="printLnBiCol,T,string,string,string,int,bool_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                     <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printLnBiCol</p>
 <p>same as printBiCol but issues a new line</p>
@@ -4876,7 +4876,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-12-13 20:15:47 UTC</small>
+        <small>Made with Nim. Generated: 2015-12-19 17:33:35 UTC</small>
       </div>
     </div>
   </div>
