--- a/cx.html
+++ b/cx.html
@@ -2021,6 +2021,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="drawBox*(hy: int = 1; wx: int = 1; hsec: int = 1; vsec: int = 1; frCol: string = yellowgreen;
          brCol: string = black; cornerCol: string = truetomato; xpos: int = 1;
          blink: bool = false)"><wbr />draw<wbr />Box</a></li>
+  <li><a class="reference" href="#randpos,"
+    title="randpos*(): int"><wbr />randpos</a></li>
   <li><a class="reference" href="#fastsplit,string,char"
     title="fastsplit*(s: string; sep: char): seq[string]"><wbr />fastsplit</a></li>
   <li><a class="reference" href="#splitty,string,string"
@@ -3811,8 +3813,7 @@ forward declaration
 <dt id="sleepy"><a name="sleepy,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">secs</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>sleepy</p>
-<p>imitates sleep but in seconds</p>
-<p>despite this being same as os.sleep </p>
+<p>imitates sleep but in seconds suitable for shorter sleeps </p>
 
 
 </dd>
@@ -4587,6 +4588,21 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 
 
 </dd>
+<dt id="randpos"><a name="randpos,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">randpos</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
+<dd>
+<p>randpos</p>
+<p>sets cursor to a random position in the visible terminal window</p>
+<blockquote><p><dl class="docutils"><dt>while 1 == 1:</dt>
+<dd><dl class="docutils"><dt>for z in 1.. 50:</dt>
+<dd>print($z,randcol(),xpos = randpos())</dd>
+</dl>
+<p>sleepy(0.0015)</p>
+</dd>
+</dl>
+</p></blockquote>
+
+
+</dd>
 <dt id="fastsplit"><a name="fastsplit,string,char"></a><pre><span class="Keyword">proc</span> <span class="Identifier">fastsplit</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">char</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span></pre></dt>
 <dd>
 fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
@@ -4910,7 +4926,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-12-22 23:11:33 UTC</small>
+        <small>Made with Nim. Generated: 2015-12-22 23:49:59 UTC</small>
       </div>
     </div>
   </div>
