--- a/cx.html
+++ b/cx.html
@@ -4592,15 +4592,10 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <dd>
 <p>randpos</p>
 <p>sets cursor to a random position in the visible terminal window</p>
-<blockquote><p><dl class="docutils"><dt>while 1 == 1:</dt>
-<dd><dl class="docutils"><dt>for z in 1.. 50:</dt>
-<dd>print($z,randcol(),xpos = randpos())</dd>
-</dl>
-<p>sleepy(0.0015)</p>
-</dd>
-</dl>
-</p></blockquote>
-
+<pre class = "listing"><span class="Keyword">while</span> <span class="DecNumber">1</span> <span class="Operator">==</span> <span class="DecNumber">1</span><span class="Punctuation">:</span>
+   <span class="Keyword">for</span> <span class="Identifier">z</span> <span class="Keyword">in</span> <span class="FloatNumber">1.</span><span class="Operator">.</span> <span class="DecNumber">50</span><span class="Punctuation">:</span>
+      <span class="Identifier">print</span><span class="Punctuation">(</span><span class="Operator">$</span><span class="Identifier">z</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="Identifier">randpos</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
+   <span class="Identifier">sleepy</span><span class="Punctuation">(</span><span class="FloatNumber">0.0015</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="fastsplit"><a name="fastsplit,string,char"></a><pre><span class="Keyword">proc</span> <span class="Identifier">fastsplit</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">char</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span></pre></dt>
@@ -4926,7 +4921,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-12-22 23:49:59 UTC</small>
+        <small>Made with Nim. Generated: 2015-12-22 23:52:15 UTC</small>
       </div>
     </div>
   </div>
