--- a/cx.html
+++ b/cx.html
@@ -2180,10 +2180,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 </p></blockquote>
 <p>Required    : see imports for modules currently expected to be available</p>
 </p></blockquote>
-<p>randPastelCol</p>
-<p>get a randomcolor from pastelSet</p>
-<pre class = "listing"><span class="Comment"># print a string 6 times in a random color selected from pastelSet</span>
-<span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span><span class="DecNumber">5</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Hello Random Color&quot;</span><span class="Punctuation">,</span><span class="Identifier">randPastelCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre></p>
+</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -4789,7 +4786,10 @@ latest terminalheight always available in th
 </dd>
 <dt id="randPastelCol"><a name="randPastelCol.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">randPastelCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
-
+<p>randPastelCol</p>
+<p>get a randomcolor from pastelSet</p>
+<pre class = "listing"><span class="Comment"># print a string 6 times in a random color selected from pastelSet</span>
+<span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span><span class="DecNumber">5</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Hello Random Color&quot;</span><span class="Punctuation">,</span><span class="Identifier">randPastelCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="msgg"><a name="msgg.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgg</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
@@ -4994,7 +4994,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2016-01-06 20:34:33 UTC</small>
+        <small>Made with Nim. Generated: 2016-01-06 20:35:55 UTC</small>
       </div>
     </div>
   </div>
