--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ ibm = <span class="pl-c1">getsymbol2</span>(<span class="pl-s">"IBM"</span>,<spa
 
 <span class="pl-c"># show some forex data</span>
 
-<span class="pl-c1">showCurrentForex</span>(@[<span class="pl-s">"EURUSD"</span>,<span class="pl-s">"GBPHKD"</span>,<span class="pl-s">"CADEUR"</span>,<span class="pl-s">"AUDNZD"</span>])
+<span class="pl-c1">showCurrentForex</span>([<span class="pl-s">"EURUSD"</span>,<span class="pl-s">"GBPHKD"</span>,<span class="pl-s">"CADEUR"</span>,<span class="pl-s">"AUDNZD"</span>])
 <span class="pl-c1">decho</span>(<span class="pl-c1">3</span>)
 </pre></div>
 
