--- a/cx.html
+++ b/cx.html
@@ -1987,10 +1987,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="isBlank(val: string): bool"><wbr />is<wbr />Blank</a></li>
   <li><a class="reference" href="#isEmpty,string"
     title="isEmpty(val: string): bool"><wbr />is<wbr />Empty</a></li>
-  <li><a class="reference" href="#makeRandomSignI,"
-    title="makeRandomSignI(): int"><wbr />make<wbr />Random<wbr />Sign<wbr />I</a></li>
-  <li><a class="reference" href="#makeRandomSignF,"
-    title="makeRandomSignF(): float"><wbr />make<wbr />Random<wbr />Sign<wbr />F</a></li>
+  <li><a class="reference" href="#getRandomSignI,"
+    title="getRandomSignI(): int"><wbr />get<wbr />Random<wbr />Sign<wbr />I</a></li>
+  <li><a class="reference" href="#getRandomSignF,"
+    title="getRandomSignF(): float"><wbr />get<wbr />Random<wbr />Sign<wbr />F</a></li>
   <li><a class="reference" href="#fmtx,openArray[string],varargs[T,]"
     title="fmtx[T](fmts: openArray[string]; fstrings: varargs[T, `$`]): string"><wbr />fmtx</a></li>
   <li><a class="reference" href="#showRune,string"
@@ -4704,18 +4704,18 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/qqtop/NimCx/blob/master/cx.nim#L1339"
 class="link-seesrc" target="_blank">Source</a>
 </dd>
-<dt id="makeRandomSignI"><a name="makeRandomSignI,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">makeRandomSignI</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">{.</span><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span><span class="Other">.}</span></pre></dt>
+<dt id="getRandomSignI"><a name="getRandomSignI,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomSignI</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">{.</span><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span><span class="Other">.}</span></pre></dt>
 <dd>
-<p>makeRandomSignI</p>
+<p>getRandomSignI</p>
 <p>returns -1 or 1 integer  to have a random positive or negative multiplier </p>
 
 &nbsp;&nbsp;<a
 href="https://github.com/qqtop/NimCx/blob/master/cx.nim#L1348"
 class="link-seesrc" target="_blank">Source</a>
 </dd>
-<dt id="makeRandomSignF"><a name="makeRandomSignF,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">makeRandomSignF</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">{.</span><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span><span class="Other">.}</span></pre></dt>
+<dt id="getRandomSignF"><a name="getRandomSignF,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomSignF</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">{.</span><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span><span class="Other">.}</span></pre></dt>
 <dd>
-<p>makeRandomSignF</p>
+<p>getRandomSignF</p>
 <p>returns -1.0 or 1.0 float  to have a random positive or negative multiplier </p>
 
 &nbsp;&nbsp;<a
@@ -6420,7 +6420,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2016-06-23 19:06:32 UTC</small>
+        <small>Made with Nim. Generated: 2016-06-23 20:42:40 UTC</small>
       </div>
     </div>
   </div>
